# home-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-cn.md  apply_agent.bat  apply_webUI_config.bat  docker-compose.yml  pyproject.toml
app/: config.py  main.py  webui_config.py
config/: config.example.yaml  config.main.yaml  user.config.example.yaml
config/comfyui/: anima_text_to_image.example.json  sdxl_text_to_image.example.json
core/: artifacts.py  audit.py  db.py  errors.py  ids.py  jobs.py  limits.py  policy.py  time.py
deploy/: Dockerfile  README.md
dev_documents/: module-extension.md  phase5-manual-printer-acceptance.md
docs/: README.md
documents/: README.md  architecture.md  configuration.md  module-development.md  testing-and-release.md  tool-contracts.md
env/: compose.config.yaml  image.test.config.yaml  localimage.test.config.yaml  phase5.test.config.yaml  phase6.test.config.yaml  run_tests.ps1
mcp_python_skills/: README.md
modules/: loader.py
tests/: helpers.py  run_tests.ps1  test_artifacts.py  test_config.py  test_dispatcher_contract.py  test_image_edit.py  test_image_generate.py  test_jobs_audit_policy.py  test_localimage_generate.py  test_mcp_transport.py  test_phase6_extension.py  test_printer.py  test_registry.py  test_tts_matrix.py
tools/: add_matrix_agent.py  apply_agent.ps1  apply_webUI_config.ps1  builtin.py  dispatcher.py  registry.py  result.py  validation.py
transport/: admin_routes.py  artifact_routes.py  mcp_server.py  request_context.py
webui/: app.css  app.js  index.html
(+89 files in other folders)
